added US to politics

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   	<body>
   		<h1>Welcome to the home of factual news!</h1>
   		<h2>Please pick from the menu below</h2>
-  		<p>Politics</p>
+  		<p>Politics in the US</p>
   	</body>
 </html>
